--- a/list-2-7.html
+++ b/list-2-7.html
@@ -364,7 +364,18 @@ document.body.addEventListener('input', POWERMODE);
 </div>
 <div id="wrap">   <div id="content">
     <div id="main">
-	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 63 篇</span></div>	    	 
+	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 64 篇</span></div>	    	 
+      <div id="log-576" class="post_list">
+	        <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/576.html">经研究和论证，我省2020年专业技术人员继续教育公需科目确定为以下两个专题：“广东‘十四五’经济社会发展趋势与战略重点”和“区块链技术和广东产业创新发展”，专业技术人员可以在“广东省专业技术人员继续教育管理系统”免费学习。2020年继续教育学时要求公需课30学时、专业课42学时、选修课12学时</div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2020-04-07 通过网页 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4208) <a href="/b2/576.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+	 
+	</p></div></div> 
+	 
       <div id="log-575" class="post_list">
 	  <a href="/b2/575.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">关于2020年广东省教育行业公需科目学习的公告</h2></a>      <div class="excerpt">
 	  	  <div class="textPost" data-url="/b2/575.html"><p><span>        根据广东省人社厅、广东省教育厅于2019年8月发布的《关于公布教育行业专业技术人员继续教育公需科目学习平台的通知》（粤人社办[2019]162号），自2019年8月起，广东省教育行业专业技术人员可在“广东省教育综合服务平台”（http://gl.gdedu.gov.cn/）上完成公需科目的学习。</span></p>
@@ -377,7 +388,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2020-04-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4580) <a href="/b2/575.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4667) <a href="/b2/575.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -388,7 +399,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2011-05-29 通过网页 
 	  	  	  <span class="ico jin">禁</span>	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3337) <a href="/b2/259.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3396) <a href="/b2/259.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -399,11 +410,11 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2011-05-28 通过网页 
 	  	  	  <span class="ico jin">禁</span>	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3887) <a href="/b2/258.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3949) <a href="/b2/258.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
-		<span class="info"> 共计：63 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-6.html'>&lt;</a><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-6.html'>6</a><span class="current">7</span><a href='list-2-7.html'>&gt;</a><a href='list-2-7.html'>尾页</a>	</div>
+		<span class="info"> 共计：64 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-6.html'>&lt;</a><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-6.html'>6</a><span class="current">7</span><a href='list-2-7.html'>&gt;</a><a href='list-2-7.html'>尾页</a>	</div>
     </div> 
 	<div id="sidebar"> 
      <div class="sidebar">
@@ -737,12 +748,11 @@ document.body.addEventListener('input', POWERMODE);
         <h3>热评文章</h3>     
 			 
            <ul class="topic"><li><a href="587.html">2026年度继续教育学时</a> <i class="iconfont icon-comm"></i> 10</li><li><a href="828.html">盛世华诞    举国同庆
-</a> <i class="iconfont icon-comm"></i> 7</li><li><a href="683.html">（小考全部试卷）雷州市2021年小学六年级教学质量监测</a> <i class="iconfont icon-comm"></i> 6</li><li><a href="652.html">2021届毕业班集体照</a> <i class="iconfont icon-comm"></i> 3</li><li><a href="19.html">现在正在想办法给空间续费</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="753.html">记录第五轮全员核酸检测——在店前山尾当采样志愿者</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1032.html">雷州各镇的村庄简史及姓氏来源（调风篇）</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1.html">博客面前 人人可以是记者</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="425.html">2013届毕业班集体照</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="697.html">2021年雷州市林氏优秀学子报名具体事项</a> <i class="iconfont icon-comm"></i> 1</li> </ul>
+</a> <i class="iconfont icon-comm"></i> 8</li><li><a href="683.html">（小考全部试卷）雷州市2021年小学六年级教学质量监测</a> <i class="iconfont icon-comm"></i> 6</li><li><a href="652.html">2021届毕业班集体照</a> <i class="iconfont icon-comm"></i> 3</li><li><a href="19.html">现在正在想办法给空间续费</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="753.html">记录第五轮全员核酸检测——在店前山尾当采样志愿者</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1032.html">雷州各镇的村庄简史及姓氏来源（调风篇）</a> <i class="iconfont icon-comm"></i> 2</li><li><a href="1.html">博客面前 人人可以是记者</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="425.html">2013届毕业班集体照</a> <i class="iconfont icon-comm"></i> 1</li><li><a href="697.html">2021年雷州市林氏优秀学子报名具体事项</a> <i class="iconfont icon-comm"></i> 1</li> </ul>
 	          </div>	  
 	       <div class="widget">
         <h3>最新评论</h3>     
-		           <ul class="comment"><li><a href="828.html#Com-47">徐建伟 : 哈哈，刚过完年就开始暑假</a> <i class="iconfont icon-reply"></i></li><li><a href="1032.html#Com-46">穿拖鞋的广东人 : 本人看过调风镇各村庄基本</a></li><li><a href="1032.html#Com-45">穿拖鞋的广东人 : 东平村委会东坡南村有误，</a></li><li><a href="828.html#Com-44">徐建伟 : 你们可放假了？？？</a> <i class="iconfont icon-reply"></i></li><li><a href="828.html#Com-43">林继 : 现在，我知是怎么回事了，</a></li><li><a href="828.html#Com-42">徐建伟 : 建议你调整下倒计时的尺寸</a> <i class="iconfont icon-reply"></i></li><li><a href="935.html#Com-38">徐建伟 : 你是一名很优秀的共产党员</a></li><li><a href="559.html#Com-37">徐建伟 : 全部显示我终于知道怎么回</a></li><li><a href="559.html#Com-36">徐建伟 : 方便加个QQ吗99369</a></li><li><a href="559.html#Com-35">徐建伟 : 我这边已经添加链接！
-</a></li></ul>	 
+		           <ul class="comment"><li><a href="828.html#Com-48">徐建伟 : 今年是大年初六，我们已开</a> <i class="iconfont icon-reply"></i></li><li><a href="828.html#Com-47">徐建伟 : 哈哈，刚过完年就开始暑假</a> <i class="iconfont icon-reply"></i></li><li><a href="1032.html#Com-46">穿拖鞋的广东人 : 本人看过调风镇各村庄基本</a></li><li><a href="1032.html#Com-45">穿拖鞋的广东人 : 东平村委会东坡南村有误，</a></li><li><a href="828.html#Com-44">徐建伟 : 你们可放假了？？？</a> <i class="iconfont icon-reply"></i></li><li><a href="828.html#Com-43">林继 : 现在，我知是怎么回事了，</a></li><li><a href="828.html#Com-42">徐建伟 : 建议你调整下倒计时的尺寸</a> <i class="iconfont icon-reply"></i></li><li><a href="935.html#Com-38">徐建伟 : 你是一名很优秀的共产党员</a></li><li><a href="559.html#Com-37">徐建伟 : 全部显示我终于知道怎么回</a></li><li><a href="559.html#Com-36">徐建伟 : 方便加个QQ吗99369</a></li></ul>	 
               </div>	  
 	       <div class="widget">
         <h3>友情链接</h3>     
